{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 1036,
  "lineage": "3db97de3-d644-51ee-6de8-90eb681cb285",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "pscibisz-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:loadbalancer/app/pscibisz-alb/b95c640639b217f4",
            "arn_suffix": "app/pscibisz-alb/b95c640639b217f4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "pscibisz-alb-1684704150.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:loadbalancer/app/pscibisz-alb/b95c640639b217f4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pscibisz-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03268691e81cc0da6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04eb4bfb187209933"
              },
              {
                "subnet_id": "subnet-0c429a59336b7e1d7"
              },
              {
                "subnet_id": "subnet-0c6e15a9421c9236c"
              }
            ],
            "subnets": [
              "subnet-04eb4bfb187209933",
              "subnet-0c429a59336b7e1d7",
              "subnet-0c6e15a9421c9236c"
            ],
            "tags": {
              "Name": "pscibisz-alb"
            },
            "tags_all": {
              "Name": "pscibisz-alb"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.security-group.aws_security_group.pscibisz-http-allowed-public",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.aws_vpc.pscibisz-terraform",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "pscibisz-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:targetgroup/pscibisz-s3-tg/30cb32430b7ba91e",
            "arn_suffix": "targetgroup/pscibisz-s3-tg/30cb32430b7ba91e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/s3/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:targetgroup/pscibisz-s3-tg/30cb32430b7ba91e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pscibisz-s3-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app": "s3"
            },
            "tags_all": {
              "app": "s3"
            },
            "target_type": "ip",
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "dependencies": [
            "module.subnets.aws_vpc.pscibisz-terraform"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:targetgroup/pscibisz-db-tg/9085f70451460576",
            "arn_suffix": "targetgroup/pscibisz-db-tg/9085f70451460576",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/db/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:targetgroup/pscibisz-db-tg/9085f70451460576",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pscibisz-db-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "app": "db"
            },
            "tags_all": {
              "app": "db"
            },
            "target_type": "ip",
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "dependencies": [
            "module.subnets.aws_vpc.pscibisz-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pscibisz-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:listener/app/pscibisz-alb/b95c640639b217f4/8a3837266cceeebf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:listener/app/pscibisz-alb/b95c640639b217f4/8a3837266cceeebf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:loadbalancer/app/pscibisz-alb/b95c640639b217f4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.pscibisz-alb",
            "module.security-group.aws_security_group.pscibisz-http-allowed-public",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.aws_vpc.pscibisz-terraform",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:targetgroup/pscibisz-s3-tg/30cb32430b7ba91e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:listener-rule/app/pscibisz-alb/b95c640639b217f4/8a3837266cceeebf/a96ed43ed9d890da",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/s3/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:listener-rule/app/pscibisz-alb/b95c640639b217f4/8a3837266cceeebf/a96ed43ed9d890da",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:listener/app/pscibisz-alb/b95c640639b217f4/8a3837266cceeebf",
            "priority": 101,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.pscibisz-alb",
            "module.alb.aws_alb_target_group.pscibisz-tg",
            "module.alb.aws_lb_listener.pscibisz-listener",
            "module.security-group.aws_security_group.pscibisz-http-allowed-public",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.aws_vpc.pscibisz-terraform",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:targetgroup/pscibisz-db-tg/9085f70451460576",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:listener-rule/app/pscibisz-alb/b95c640639b217f4/8a3837266cceeebf/730150c09fe84512",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/db/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:listener-rule/app/pscibisz-alb/b95c640639b217f4/8a3837266cceeebf/730150c09fe84512",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-3:890769921003:listener/app/pscibisz-alb/b95c640639b217f4/8a3837266cceeebf",
            "priority": 102,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.pscibisz-alb",
            "module.alb.aws_alb_target_group.pscibisz-tg",
            "module.alb.aws_lb_listener.pscibisz-listener",
            "module.security-group.aws_security_group.pscibisz-http-allowed-public",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.aws_vpc.pscibisz-terraform",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpc-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:security-group/sg-0ef1069bd7a94e305",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0ef1069bd7a94e305",
            "name": "terraform-20221020170831227400000002",
            "tags": {
              "Name": "pscibisz-mysql-allowed-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnets_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-047755f48e21683d0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:subnet/subnet-047755f48e21683d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047755f48e21683d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "pscibisz-PrivateSubnet-eu-west-3b"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          }
        },
        {
          "index_key": "subnet-04eb4bfb187209933",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:subnet/subnet-04eb4bfb187209933",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.11.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04eb4bfb187209933",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "pscibisz-PublicSubnet-eu-west-3b"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          }
        },
        {
          "index_key": "subnet-092e219eb43a17444",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:subnet/subnet-092e219eb43a17444",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092e219eb43a17444",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "pscibisz-PrivateSubnet-eu-west-3a"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          }
        },
        {
          "index_key": "subnet-0c429a59336b7e1d7",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:subnet/subnet-0c429a59336b7e1d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "available_ip_address_count": 248,
            "cidr_block": "10.0.10.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c429a59336b7e1d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "pscibisz-PublicSubnet-eu-west-3a"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          }
        },
        {
          "index_key": "subnet-0c6e15a9421c9236c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:subnet/subnet-0c6e15a9421c9236c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "available_ip_address_count": 249,
            "cidr_block": "10.0.12.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6e15a9421c9236c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "pscibisz-PublicSubnet-eu-west-3c"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          }
        },
        {
          "index_key": "subnet-0e643281f2b9250a1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:subnet/subnet-0e643281f2b9250a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e643281f2b9250a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "pscibisz-PrivateSubnet-eu-west-3c"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          }
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pscibisz-http-allowed-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:security-group/sg-03268691e81cc0da6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03268691e81cc0da6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221020170831227400000001",
            "name_prefix": "terraform-",
            "owner_id": "890769921003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pscibisz-http-allowed-public"
            },
            "tags_all": {
              "Name": "pscibisz-http-allowed-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_vpc.pscibisz-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pscibisz-mysql-allowed-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:security-group/sg-0ef1069bd7a94e305",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef1069bd7a94e305",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20221020170831227400000002",
            "name_prefix": "terraform-",
            "owner_id": "890769921003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pscibisz-mysql-allowed-private"
            },
            "tags_all": {
              "Name": "pscibisz-mysql-allowed-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_vpc.pscibisz-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pscibisz-ssh-allowed-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:security-group/sg-0b4cc5ba567713311",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4cc5ba567713311",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221020170831227400000003",
            "name_prefix": "terraform-",
            "owner_id": "890769921003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pscibisz-ssh-allowed-public"
            },
            "tags_all": {
              "Name": "pscibisz-ssh-allowed-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_vpc.pscibisz-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "pscibisz-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:vpc/vpc-06d3410e2fbf2e2ca",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0548e7c1fdfac6b38",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-064ed40203382370c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06d3410e2fbf2e2ca",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d10d8ce024cb3f18",
            "owner_id": "890769921003",
            "tags": {
              "Name": "pscibisz-terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-GW-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050b322985f451ff9",
            "association_id": "eipassoc-0f1ccfd0121691202",
            "domain": "vpc",
            "id": "eipalloc-050b322985f451ff9",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0984a60a4bf6beb31",
            "private_dns": "ip-10-0-10-40.eu-west-3.compute.internal",
            "private_ip": "10.0.10.40",
            "public_dns": "ec2-13-36-201-231.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.201.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pscibisz-NAT-eu-west-3a"
            },
            "tags_all": {
              "Name": "pscibisz-NAT-eu-west-3a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d35b95d66b74212f",
            "association_id": "eipassoc-056b2382874bae4b8",
            "domain": "vpc",
            "id": "eipalloc-0d35b95d66b74212f",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0c4bbb6d575c16e3b",
            "private_dns": "ip-10-0-11-23.eu-west-3.compute.internal",
            "private_ip": "10.0.11.23",
            "public_dns": "ec2-15-237-2-197.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.2.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pscibisz-NAT-eu-west-3b"
            },
            "tags_all": {
              "Name": "pscibisz-NAT-eu-west-3b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe709262ff53d1d5",
            "association_id": "eipassoc-00a6b719b1b10c671",
            "domain": "vpc",
            "id": "eipalloc-0fe709262ff53d1d5",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-01971e765c040dd95",
            "private_dns": "ip-10-0-12-116.eu-west-3.compute.internal",
            "private_ip": "10.0.12.116",
            "public_dns": "ec2-13-36-103-8.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.103.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pscibisz-NAT-eu-west-3c"
            },
            "tags_all": {
              "Name": "pscibisz-NAT-eu-west-3c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:internet-gateway/igw-0eb045bf6c6a57060",
            "id": "igw-0eb045bf6c6a57060",
            "owner_id": "890769921003",
            "tags": {
              "Name": "pscibisz-IGW"
            },
            "tags_all": {
              "Name": "pscibisz-IGW"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "dependencies": [
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-050b322985f451ff9",
            "connectivity_type": "public",
            "id": "nat-042add734a2d46dd5",
            "network_interface_id": "eni-0984a60a4bf6beb31",
            "private_ip": "10.0.10.40",
            "public_ip": "13.36.201.231",
            "subnet_id": "subnet-0c429a59336b7e1d7",
            "tags": {
              "Name": "pscibisz-eu-west-3a"
            },
            "tags_all": {
              "Name": "pscibisz-eu-west-3a"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.NAT-GW-EIP",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d35b95d66b74212f",
            "connectivity_type": "public",
            "id": "nat-038b0b4635f1cc5ae",
            "network_interface_id": "eni-0c4bbb6d575c16e3b",
            "private_ip": "10.0.11.23",
            "public_ip": "15.237.2.197",
            "subnet_id": "subnet-04eb4bfb187209933",
            "tags": {
              "Name": "pscibisz-eu-west-3b"
            },
            "tags_all": {
              "Name": "pscibisz-eu-west-3b"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.NAT-GW-EIP",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe709262ff53d1d5",
            "connectivity_type": "public",
            "id": "nat-0b94506b35f97cf3a",
            "network_interface_id": "eni-01971e765c040dd95",
            "private_ip": "10.0.12.116",
            "public_ip": "13.36.103.8",
            "subnet_id": "subnet-0c6e15a9421c9236c",
            "tags": {
              "Name": "pscibisz-eu-west-3c"
            },
            "tags_all": {
              "Name": "pscibisz-eu-west-3c"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.NAT-GW-EIP",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:route-table/rtb-09e0d6f51d0659530",
            "id": "rtb-09e0d6f51d0659530",
            "owner_id": "890769921003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-042add734a2d46dd5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-RT-eu-west-3a"
            },
            "tags_all": {
              "Name": "private-RT-eu-west-3a"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.NAT-GW-EIP",
            "module.subnets.aws_nat_gateway.NAT-GW",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:route-table/rtb-0a080e7d6cceceec6",
            "id": "rtb-0a080e7d6cceceec6",
            "owner_id": "890769921003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-038b0b4635f1cc5ae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-RT-eu-west-3b"
            },
            "tags_all": {
              "Name": "private-RT-eu-west-3b"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.NAT-GW-EIP",
            "module.subnets.aws_nat_gateway.NAT-GW",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:route-table/rtb-0bc3784c11b0c4488",
            "id": "rtb-0bc3784c11b0c4488",
            "owner_id": "890769921003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b94506b35f97cf3a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-RT-eu-west-3c"
            },
            "tags_all": {
              "Name": "private-RT-eu-west-3c"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.NAT-GW-EIP",
            "module.subnets.aws_nat_gateway.NAT-GW",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:route-table/rtb-063b115fd4d6f8105",
            "id": "rtb-063b115fd4d6f8105",
            "owner_id": "890769921003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb045bf6c6a57060",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pscibisz-public-RT-eu-west-3a"
            },
            "tags_all": {
              "Name": "pscibisz-public-RT-eu-west-3a"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_internet_gateway.IGW",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:route-table/rtb-0652d146e3ccf6098",
            "id": "rtb-0652d146e3ccf6098",
            "owner_id": "890769921003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb045bf6c6a57060",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pscibisz-public-RT-eu-west-3b"
            },
            "tags_all": {
              "Name": "pscibisz-public-RT-eu-west-3b"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_internet_gateway.IGW",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:route-table/rtb-0cc0e309686ffa19a",
            "id": "rtb-0cc0e309686ffa19a",
            "owner_id": "890769921003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb045bf6c6a57060",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pscibisz-public-RT-eu-west-3c"
            },
            "tags_all": {
              "Name": "pscibisz-public-RT-eu-west-3c"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_internet_gateway.IGW",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a84ddd94e20e001d",
            "route_table_id": "rtb-063b115fd4d6f8105",
            "subnet_id": "subnet-0c429a59336b7e1d7"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.IGW",
            "module.subnets.aws_route_table.public-RT",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07942e3c813145841",
            "route_table_id": "rtb-0652d146e3ccf6098",
            "subnet_id": "subnet-04eb4bfb187209933"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.IGW",
            "module.subnets.aws_route_table.public-RT",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006287ae0ad41985f",
            "route_table_id": "rtb-0cc0e309686ffa19a",
            "subnet_id": "subnet-0c6e15a9421c9236c"
          },
          "dependencies": [
            "module.subnets.aws_internet_gateway.IGW",
            "module.subnets.aws_route_table.public-RT",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pscibisz-rta-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b33965d8d52844a",
            "route_table_id": "rtb-09e0d6f51d0659530",
            "subnet_id": "subnet-092e219eb43a17444"
          },
          "dependencies": [
            "module.subnets.aws_eip.NAT-GW-EIP",
            "module.subnets.aws_nat_gateway.NAT-GW",
            "module.subnets.aws_route_table.private-RT",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e32c720a3d8b2db0",
            "route_table_id": "rtb-0a080e7d6cceceec6",
            "subnet_id": "subnet-047755f48e21683d0"
          },
          "dependencies": [
            "module.subnets.aws_eip.NAT-GW-EIP",
            "module.subnets.aws_nat_gateway.NAT-GW",
            "module.subnets.aws_route_table.private-RT",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab35a4914c0b5b17",
            "route_table_id": "rtb-0bc3784c11b0c4488",
            "subnet_id": "subnet-0e643281f2b9250a1"
          },
          "dependencies": [
            "module.subnets.aws_eip.NAT-GW-EIP",
            "module.subnets.aws_nat_gateway.NAT-GW",
            "module.subnets.aws_route_table.private-RT",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:subnet/subnet-092e219eb43a17444",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092e219eb43a17444",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pscibisz-PrivateSubnet-eu-west-3a"
            },
            "tags_all": {
              "Name": "pscibisz-PrivateSubnet-eu-west-3a"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:subnet/subnet-047755f48e21683d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047755f48e21683d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pscibisz-PrivateSubnet-eu-west-3b"
            },
            "tags_all": {
              "Name": "pscibisz-PrivateSubnet-eu-west-3b"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:subnet/subnet-0e643281f2b9250a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e643281f2b9250a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pscibisz-PrivateSubnet-eu-west-3c"
            },
            "tags_all": {
              "Name": "pscibisz-PrivateSubnet-eu-west-3c"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:subnet/subnet-0c429a59336b7e1d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c429a59336b7e1d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pscibisz-PublicSubnet-eu-west-3a"
            },
            "tags_all": {
              "Name": "pscibisz-PublicSubnet-eu-west-3a"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:subnet/subnet-04eb4bfb187209933",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04eb4bfb187209933",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pscibisz-PublicSubnet-eu-west-3b"
            },
            "tags_all": {
              "Name": "pscibisz-PublicSubnet-eu-west-3b"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:subnet/subnet-0c6e15a9421c9236c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6e15a9421c9236c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890769921003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pscibisz-PublicSubnet-eu-west-3c"
            },
            "tags_all": {
              "Name": "pscibisz-PublicSubnet-eu-west-3c"
            },
            "vpc_id": "vpc-06d3410e2fbf2e2ca"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.subnets.data.aws_vpc.pscibisz-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pscibisz-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:890769921003:vpc/vpc-06d3410e2fbf2e2ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eeb9ba833c7777db",
            "default_route_table_id": "rtb-0d10d8ce024cb3f18",
            "default_security_group_id": "sg-0ae156322f24081c1",
            "dhcp_options_id": "dopt-064ed40203382370c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06d3410e2fbf2e2ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d10d8ce024cb3f18",
            "owner_id": "890769921003",
            "tags": {
              "Name": "pscibisz-terraform"
            },
            "tags_all": {
              "Name": "pscibisz-terraform"
            }
          }
        }
      ]
    }
  ]
}